better header and new svg logo

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,40 +1,78 @@
 ---
 import Button from "./Button.astro";
+import Logo from "./Logo.astro";
+
 
 ---
 
-<header class="py-8 px-4 mx-auto max-w-xl lg:py16 lc:px-6">
-  <div class="mx-auto text-center mb-8 lg:mb-16">
-    <h2 class="mb-4 text-5xl tracking-tight font-extrabold text-white">
-      SpaceX Launches
-    </h2>
-    <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">
-      All the information avout SpaceX launches
-    </p>
+<header
+  id="landing-header"
+  class="py-3 sm:px-10 px-0 flex items-center fixed top-0 w-full 
+  justify-between z-40"
+>
+  <div class="flex flex-grow basis-0">
+    <Logo />
   </div>
-  <nav
-    class="flex flex-col items-center justify-between w-full text-center md:flex-row"
-  >
-    <Button 
-      bgColor = "bg-white"
-      textColor = "text-stone-900"
-      href = "/"
+
+  <nav>
+    <ul
+      class="[&>li>a]:transition-colors [&>li>a]:duration-1000 flex text-sm 
+      [&>li>a]:text-current [&>li>a]:font-medium [&>li>a]:inline-block 
+      [&>li>a]:px-4 [&>li>a]:py-2"
     >
-      Home
-    </Button>
-    <Button 
-      bgColor = "bg-white"
-      textColor = "text-stone-900"
-      href = "/about"
-    >
-      About
-    </Button>
-    <Button 
-      bgColor = "bg-white"
-      textColor = "text-stone-900"
-      href = "#"
-    >
-      Nothing
-    </Button>
+      <li><a href="#ModelS">Model S</a></li>
+      <li><a href="#Model3">Model 3</a></li>
+      <li><a href="#ModelX">Model X</a></li>
+      <li><a href="#ModelY">Model Y</a></li>
+    </ul>
   </nav>
+
+  <nav 
+    class="hidden sm:[ul>li]:margin-0 lg:flex flex-grow justify-end basis-0">
+    <ul
+      class="[&>li>a]:transition-colors [&>li>a]:duration-1000 flex text-sm 
+      [&>li>a]:text-current [&>li>a]:font-medium [&>li>a]:inline-block 
+      [&>li>a]:px-4 [&>li>a]:py-2"
+    >
+      <li><a href="#">Soporte</a></li>
+      <li><a href="#">Tienda</a></li>
+      <li><a href="#">Cuenta</a></li>
+      <li><a href="#">Menú</a></li>
+    </ul>
+  </nav>
+
+  <div
+    id="menu-backdrop"
+    class="absolute bg-white/10 backdrop-blur-xl rounded
+  left-[var(--left)] top-[var(--top)]
+  w-[var(--width)] h-[var(--height)]
+  transition-all duration-300
+  ease-in-out opacity-0 -z-10"
+  >
+  </div>
 </header>
+
+<script>
+  const listItem = document.querySelectorAll("#landing-header li");
+  const menuBackdrop = document.querySelector("#menu-backdrop") as HTMLElement;
+
+  listItem.forEach((item) => {
+    item.addEventListener("mouseenter", () => {
+      const { left, top, width, height } = item.getBoundingClientRect();
+
+      menuBackdrop.style.setProperty("--left", `${left}px`);
+      menuBackdrop.style.setProperty("--top", `${top}px`);
+      menuBackdrop.style.setProperty("--width", `${width}px`);
+      menuBackdrop.style.setProperty("--height", `${height}px`);
+
+      menuBackdrop.style.opacity = "1";
+      menuBackdrop.style.visibility = "visible";
+    });
+
+    item.addEventListener("mouseleave", () => {
+      menuBackdrop.style.opacity = "0";
+      menuBackdrop.style.visibility = "hidden";
+    });
+  });
+</script>
+
