--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
+import Launches from "../components/Launches.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="SpaceX.">
-	<main></main>
+	<Launches />
 </Layout>
