--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import Launches from "../components/Launches.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="SpaceX.">
+<Layout title="SpaceX Launches">
 	<Launches />
 </Layout>
