--- a/src/components/Launches.astro
+++ b/src/components/Launches.astro
@@ -1,37 +1,24 @@
 ---
-import { type APISpaceXResponse } from "../types/api";
 import CardLaunch from "./CardLaunch.astro";
 
-const res = await fetch("https://api.spacexdata.com/v5/launches/query", {
-  method: "POST",
-  headers: {
-    "Content-Type": "application/json",
-  },
-  body: JSON.stringify({
-    query: {},
-    options: {
-      sort: {
-        date_unix: "asc",
-      },
-      limit: 12,
-    },
-  }),
-});
+import { getLatestLaunches } from "../services/spacex"
 
-const { docs: launches } = (await res.json()) as APISpaceXResponse;
+const launches = await getLatestLaunches()
 ---
 
 <div class="grid gap-8 sm:gird-cols-2 lg:grid-cols-3 py-[10rem]">
   {
     launches.map(
-      ({id, links, success, flight_number: flightNumber, details}) => ( 
+      ({id, links, success, flight_number: flightNumber, details, name}) => ( 
         <CardLaunch 
           id = {id}
           img = {links.patch.small}
           success = {success}
-          flightNumber = {flightNumber}
+          name = {name}
           details = {details}
+          flightNumber = {flightNumber}
         />
     ))
   }
 </div>
+
