--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/Header.astro";
+import { ViewTransitions  } from "astro:transitions";
 
 interface Props {
   title: string;
@@ -18,12 +19,16 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <ViewTransitions />
   </head>
-
+  
   <body class="bg-gray-900 min-h-screen pb-32">
-    <Header />
+    <header style="font-family: 'Overpass', sans-serif;">
+      <Header />
+    </header>
     
-    <main class="max-w-5xl px-4 m-auto">
+
+    <main style="font-family: 'Exo 2', sans-serif;" class="max-w-5xl px-4 py-[10rem] m-auto">
       <slot />
     </main>
   </body>
@@ -31,6 +36,10 @@ const { title } = Astro.props;
 </html>
 
 <style is:global>
+  
+  @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@100&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@500&display=swap');
+
   :root {
     --accent: 136, 58, 234;
     --accent-light: 224, 204, 250;
@@ -43,20 +52,10 @@ const { title } = Astro.props;
     );
   }
   html {
-    font-family: system-ui, sans-serif;
+    font-family: 'Exo 2', sans-serif;
     background: #13151a;
     background-size: 224px;
     color-scheme: dark light;
   }
-  code {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      Liberation Mono,
-      DejaVu Sans Mono,
-      Bitstream Vera Sans Mono,
-      Courier New,
-      monospace;
-  }
+
 </style>
