--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Layout from "../layouts/Layout.astro";
 
 <style>
 	body {
-		background-image: url(../../public/background.jpg);
+		/* background-image: url(../../public/background.jpg); */
 		background-size: cover;
 		background-attachment: fixed;
 		background-position: center center;
