--- a/src/components/Launches.astro
+++ b/src/components/Launches.astro
@@ -4,6 +4,8 @@ import CardLaunch from "./CardLaunch.astro";
 import { getLatestLaunches } from "../services/spacex"
 
 const launches = await getLatestLaunches()
+
+console.log(launches)
 ---
 
 <div class="grid gap-8 sm:gird-cols-2 lg:grid-cols-3 py-[10rem]">
