--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,12 @@
 ---
-import Launches from "../components/Launches.astro";
 import Rockets from "../components/Rockets.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="SpaceX Launches">
-
+<Layout title="SpaceX">
 	<div class="border">
 		<Rockets />
-	</div>
-	
-	<Launches />
-	
+	</div>	
 </Layout>
 
 <style>
