--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,9 @@ import Button from "./Button.astro";
 import Logo from "./Logo.astro";
 
 
+import { getRockets } from "../services/spacexv4";
+const rocketDocs = await getRockets();
+
 ---
 
 <header
@@ -10,9 +13,9 @@ import Logo from "./Logo.astro";
   class="py-3 md:px-10 px-0 flex items-center fixed top-0 w-full 
   justify-between z-40"
 >
-  <div class="flex flex-grow basis-0 ">
+  <a href="/" class="flex flex-grow basis-0 ">
     <Logo />
-  </div>
+  </a>
 
   <nav>
     <ul
@@ -20,11 +23,14 @@ import Logo from "./Logo.astro";
       [&>li>a]:text-current [&>li>a]:inline-block 
       [&>li>a]:px-4 [&>li>a]:py-2"
     >
-      <li><a href="#">Falcon</a></li>
-      <li><a href="#">Deamon</a></li>
-      <li><a href="#">Starship</a></li>
-      <li><a href="#">DMC</a></li>
-      <li><a href="/">Launches</a></li>
+      {
+        rocketDocs.map(({ name }) => (
+          
+        <li><a href={`/rocket/${name}`}>{name}</a></li>
+
+        ))
+      }
+      <li><a href="/allLaunches">All Launches</a></li>
 
     </ul>
   </nav>
@@ -36,7 +42,7 @@ import Logo from "./Logo.astro";
       [&>li>a]:text-current [&>li>a]:inline-block 
       [&>li>a]:px-4 [&>li>a]:py-2"
     >
-      <li><a href="#">Menú</a></li>
+      <li><a href="/">Menú</a></li>
     </ul>
   </nav>
 
