--- a/src/components/Rockets.astro
+++ b/src/components/Rockets.astro
@@ -1,26 +1,25 @@
 ---
-import CardRocket from "./CardRocket.astro";
-
-import { getRockets } from "../services/spacex";
-import { type Api4SpaceXResponse } from "../types/api4";
+import { getRockets } from "../services/spacexv4";
+import CardRocket from "../components/CardRocket.astro";
 
 
-const rockets: Api4SpaceXResponse = await getRockets();
+const rocketDocs = await getRockets();
 
-const rocketDocs = rockets.docs;
-
-console.log(rocketDocs)
-
-rocketDocs.map(({name, country, company, description}) => {
-    console.log(name)
-    console.log(country)
-    console.log(company)
-    console.log(description)
+rocketDocs.map((rocket) => {
+  console.log(rocket.id)
 })
+ 
 ---
 
 <div class="grid gap-8 sm:gird-cols-2 lg:grid-cols-3 py-[3rem]">
-
+  {
+    rocketDocs.map(({ name, wikipedia, first_flight, country, cost_per_launch, description, success_rate_pct, height, engines, }) => (
+      <CardRocket 
+        name={name}
+        country = {country}
+      />  
+    ))
+  }
 </div>
 
 <p>hola</p>
