--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ const rocketDocs = await getRockets();
   class="py-3 md:px-10 px-0 flex items-center fixed top-0 w-full 
   justify-between z-40"
 >
-  <a href="/" class="flex flex-grow basis-0 ">
+  <!-- <a href="/" class="flex flex-grow basis-0 ">
     <Logo />
   </a>
 
@@ -24,10 +24,9 @@ const rocketDocs = await getRockets();
       [&>li>a]:px-4 [&>li>a]:py-2"
     >
       {
-        rocketDocs.map(({ name }) => (
+        rocketDocs.map(({ name, id }) => (
           
-        <li><a href={`/rocket/${name}`}>{name}</a></li>
-
+          <li><a href={`/rocket/${id}`}>{name}</a></li>
         ))
       }
       <li><a href="/allLaunches">All Launches</a></li>
@@ -35,8 +34,7 @@ const rocketDocs = await getRockets();
     </ul>
   </nav>
 
-  <nav 
-    class="hidden sm:[ul>li]:margin-0 lg:flex flex-grow justify-end basis-0">
+  <nav class="sm:[ul>li]:margin-0 lg:flex flex-grow justify-end basis-0">
     <ul
       class="[&>li>a]:transition-colors [&>li>a]:duration-1000 flex text-lg 
       [&>li>a]:text-current [&>li>a]:inline-block 
@@ -44,7 +42,42 @@ const rocketDocs = await getRockets();
     >
       <li><a href="/">Menú</a></li>
     </ul>
-  </nav>
+  </nav> -->
+
+
+  <a href="/" class="flex flex-grow basis-0 ">
+    <Logo />
+  </a>
+
+  <div>
+    
+    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 mr-10 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+        <span class="sr-only">Open main menu</span>
+        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+        </svg>
+    </button>
+
+    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+      <ul class="[&>li>a]:transition-colors [&>li>a]:duration-1000 flex text-lg 
+        [&>li>a]:text-current [&>li>a]:inline-block 
+        [&>li>a]:px-4 [&>li>a]:py-2">
+        {
+          rocketDocs.map(({ name, id }) => (
+            
+            <li><a href={`/rocket/${id}`}>{name}</a></li>
+          ))
+        }
+        <li>
+          <a href="#" class="block py-2 pl-3 pr-4 text-white rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  
+
+
 
   <div
     id="menu-backdrop"
