--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,10 @@
 ---
-import Rockets from "../components/Rockets.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="SpaceX">
-	<div class="border">
-		<Rockets />
+	<div class="flex justify-center">
+		<h1 class="text-9xl">Main Menu</h1>
 	</div>	
 </Layout>
 
