improvements in navbar

--- a/src/components/ImagesCarrousel.astro
+++ b/src/components/ImagesCarrousel.astro
@@ -2,6 +2,6 @@
 const {image} = Astro.props
 ---
 
-<div class=" my-[25px] border-[5px]" data-carousel-item>
-    <img src={image} alt="...">
+<div class=" my-[25px] border-[5px]">
+    <img src={image} alt="···">
 </div>
