--- a/src/pages/allLaunches.astro
+++ b/src/pages/allLaunches.astro
@@ -5,5 +5,21 @@ import Launches from "../components/Launches.astro";
 ---
 
 <Layout title="Launches">
+	<div class="flex justify-center pt-[6rem]"	>
+		<h1 class="text-8xl font-extrabold border-b-2">
+			SpaceX Launches
+		</h1>
+	</div>
+	
 	<Launches />
 </Layout>
+
+
+<style>
+	body {
+	  background-image: url(../../../public/bg3.jpg);
+	  background-size: cover;
+	  background-attachment: fixed;
+	  background-position: center center;
+	}
+  </style>
