--- a/src/pages/allLaunches.astro
+++ b/src/pages/allLaunches.astro
@@ -5,8 +5,8 @@ import Launches from "../components/Launches.astro";
 ---
 
 <Layout title="Launches">
-	<div class="flex justify-center pt-[6rem]"	>
-		<h1 class="text-8xl font-extrabold border-b-2">
+	<div class="flex justify-center mt-[-1rem] mb-5"	>
+		<h1 class="font-black sm:text-[7rem] text-7xl">
 			SpaceX Launches
 		</h1>
 	</div>
