--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,10 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="SpaceX">
-	<div class="flex justify-center mb-5">
-		<h1 class="font-black text-9xl">SpaceX</h1>
+	<div class="flex justify-center mt-[-1rem] mb-5">
+		<h1 class="font-black sm:text-[7rem] text-7xl">About This Project</h1>
 	</div>	
-	<p class="text-3xl font-black">
+	<p class="text-3xl text-justify font-bold mt-24 mb-10">
 		This project is a web application created using Astro, Tailwind CSS, and TypeScript. It's important to note that none of the images displayed on the website belong to the project owner. The main purpose of this website is to serve as a testing ground for the Astro framework.
 		<br>
 		<br>
