--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -59,7 +59,7 @@ const rocketDocs = await getRockets();
           <a
             href="/"
             class="block py-2 pl-3 pr-4 text-white rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
-            aria-current="page">Home</a
+            aria-current="page">About</a
           >
         </li>
       </ul>
