--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,13 +8,14 @@ import Layout from "../layouts/Layout.astro";
 		<h1 class="font-black sm:text-[7rem] text-7xl">About This Project</h1>
 	</div>	
 	<p class="text-3xl text-justify font-bold mt-24 mb-10">
-		This project is a web application created using Astro, Tailwind CSS, and TypeScript. It's important to note that none of the images displayed on the website belong to the project owner. The main purpose of this website is to serve as a testing ground for the Astro framework.
+		This website is built with Astro, Tailwind CSS and Typescript.
+		It is important to note that none of the images on the site belong to me.
 		<br>
 		<br>
-		The website also incorporates functionality to fetch data from two SpaceX APIs, enriching the user experience with real-time information. Despite the inclusion of SpaceX data, it's important to emphasize that this project is primarily intended for testing and demonstration purposes.
+		The main purpose of this project is to serve as testing ground for the Astro framework.
 		<br>
 		<br>
-		By utilizing modern web development technologies like Astro, Tailwind CSS, and TypeScript, this project showcases the potential of these tools for building efficient and interactive web applications while emphasizing its non-ownership of any displayed images. It serves as a testament to the capabilities of web development frameworks in today's digital landscape.
+		The data is fetched from two SpaceX API's.
 	</p>
 </Layout>
 
