--- a/src/pages/rocket/[id].astro
+++ b/src/pages/rocket/[id].astro
@@ -71,7 +71,7 @@ console.log(rocket?.wikipedia);
       </p>
     </section>
 
-    <section class="flex-col col-2">
+    <section class="flex-col col-2 mb-9">
       {rocket?.flickr_images.map((image) => <ImagesCarrousel image={image} />)}
       <p class="text-4xl">
         More info in <a
