--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
 	<div class="flex justify-center mt-[-1rem] mb-5">
 		<h1 class="font-black sm:text-[7rem] text-7xl">About This Project</h1>
 	</div>	
-	<p class="text-3xl text-justify font-bold mt-24 mb-10">
+	<p class="text-3xl text-justify font-bold mt-24 sm:mb-[5rem] md:mb-[10rem] lg:mb-[20rem]">
 		This website is built with Astro, Tailwind CSS and Typescript.
 		It is important to note that none of the images on the site belong to me.
 		<br>
@@ -32,7 +32,7 @@ import Layout from "../layouts/Layout.astro";
 
 	body {
 		animation: slidein 0.5s ease-in-out;
-		background-image: url(../../public/bg6.jpg);
+		background-image: url(/bg6.webp);
 		background-size: cover;
 		background-attachment: fixed;
 		background-position: center center;
