--- a/src/pages/allLaunches.astro
+++ b/src/pages/allLaunches.astro
@@ -17,7 +17,7 @@ import Launches from "../components/Launches.astro";
 
 <style>
 	body {
-	  background-image: url(../../../public/bg3.jpg);
+	  background-image: url(/bg3.webp);
 	  background-size: cover;
 	  background-attachment: fixed;
 	  background-position: center center;
