--- a/src/pages/launch/[id].astro
+++ b/src/pages/launch/[id].astro
@@ -98,7 +98,7 @@ const launchStatus = launch?.success ? "Success" : "Failure"
 
 <style>
   body {
-    background-image: url(../../../public/bg3.jpg);
+    background-image: url(/bg3.webp);
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
