--- a/src/pages/rocket/[id].astro
+++ b/src/pages/rocket/[id].astro
@@ -97,7 +97,7 @@ console.log(rocket?.wikipedia);
     }
   }
   body {
-    background-image: url(../../../public/bg1.jpg);
+    background-image: url(/bg1.webp);
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
