--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Header from "../components/Header.astro";
+import Header from "../components/HeaderGo.astro";
 import Footer from "../components/Footer.astro";
 
 import { ViewTransitions  } from "astro:transitions";
