--- a/src/pages/rocket/[id].astro
+++ b/src/pages/rocket/[id].astro
@@ -72,7 +72,32 @@ console.log(rocket?.wikipedia);
     </section>
 
     <section class="flex-col col-2 mb-9">
-      {rocket?.flickr_images.map((image) => <ImagesCarrousel image={image} />)}
+
+      
+      
+
+<section class="container-carousel">
+	<div class="slider-wrapper">
+		<div class="slider-carousel">
+      {
+      rocket?.flickr_images.map((image, index) => (
+        <img src={image} id={index} alt="spacex rocket" />
+      ))
+      }
+			
+		</div>
+
+		<div class="slider-nav">
+			{
+        rocket?.flickr_images.map((image, index) => (
+          <a href={`#${index}`}></a>
+        ))
+      }
+		</div>
+
+	</div>
+</section>
+      
       <p class="text-4xl">
         More info in <a
           class="text-blue-300 font-black border-blue-300 border-b-2"
@@ -101,5 +126,60 @@ console.log(rocket?.wikipedia);
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
+  }
+
+  .container-carousel{
+		padding: 2rem;
+	}
+
+	.slider-wrapper{
+		position: relative;
+		max-width: 90rem;
+		margin: 0 auto;
+	}
+
+	.slider-carousel{
+		display: flex;
+		aspect-ratio: 16/9;
+		overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    border-radius: 0.5rem;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .slider-carousel img {
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+  }
+
+  .slider-carousel::-webkit-scrollbar {
+	display: none;
+  }
+
+  .slider-nav {
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+  }
+
+  .slider-nav a {
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.75;
+    transition: opacity ease 250ms;
+  }
+
+  .slider-nav a:hover {
+    opacity: 1;
   }
 </style>
